--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Photo | portofolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet">
+      <link rel="icon" type="image/png"
+        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/f_auto,q_auto,w_96/v1748005761/favicon-96x96_pqplqa.png"
+        sizes="96x96" />
+      <link rel="icon" type="image/svg+xml"
+        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/f_auto,q_auto,w_64/v1748005765/favicon_zbxqia.svg" />
+      <link rel="shortcut icon"
+        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/f_auto,q_auto/v1748005761/favicon_pscxlo.ico" />
+      <link rel="apple-touch-icon" sizes="180x180"
+        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/f_auto,q_auto,w_180/v1748005761/apple-touch-icon_lejau2.png"/>
   </head>
   <body class="bg-white text-gray-800">
     <div id="root"></div>
