--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet">
       <link rel="icon" type="image/png"
-        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/f_auto,q_auto,w_96/v1748005761/favicon-96x96_pqplqa.png"
-        sizes="96x96" />
+        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060075/favicon-96x96_yjq4xw.png" sizes="96x96" />
       <link rel="icon" type="image/svg+xml"
-        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/f_auto,q_auto,w_64/v1748005765/favicon_zbxqia.svg" />
-      <link rel="shortcut icon"
-        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/f_auto,q_auto/v1748005761/favicon_pscxlo.ico" />
+        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060099/favicon_g6dyft.svg" />
+      <link rel="shortcut icon" href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060075/favicon_obgxay.ico" />
       <link rel="apple-touch-icon" sizes="180x180"
-        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/f_auto,q_auto,w_180/v1748005761/apple-touch-icon_lejau2.png"/>
+        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060076/apple-touch-icon_rsrx62.png" />
   </head>
   <body class="bg-white text-gray-800">
     <div id="root"></div>
