--- a/index.html
+++ b/index.html
@@ -3,17 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo | portofolio</title>
+    <title>Lens Craft</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet">
-      <link rel="icon" type="image/png"
-        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060075/favicon-96x96_yjq4xw.png" sizes="96x96" />
-      <link rel="icon" type="image/svg+xml"
-        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060099/favicon_g6dyft.svg" />
-      <link rel="shortcut icon" href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060075/favicon_obgxay.ico" />
-      <link rel="apple-touch-icon" sizes="180x180"
-        href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060076/apple-touch-icon_rsrx62.png" />
+    <link rel="shortcut icon" href="/images/icons.png" type="image/x-icon">
   </head>
   <body class="bg-white text-gray-800">
     <div id="root"></div>
