--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet">
-    <link rel="shortcut icon" href="/images/icons.png" type="image/x-icon">
-  </head>
+      <link rel="icon" type="image/svg+xml" href="/icons.png" />
+    </head>
   <body class="bg-white text-gray-800">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
